2002-01-16  Ryan Nunn  <triforce@merlin.net.au>
	* mapedit/Makefile.mingw : Use $(SRC) instead of .. when compiling the
	  icon. Also other updates

2002-01-16  Patrick Burke  <takhisisii@yahoo.com.au>
	* shapes/monstinf.h: Added missing #include <cassert>.
	* conf/*.cc: Fixed 'special character' (&amp; etc.) encoding/decoding.

2002-01-15  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapeedit.cc: Show 'equip' dialog.
	* shapes/monstinf.h:  Interface methods added.
	* objs/chunks.cc: Don't check terrain if MOVE_MAPEDITOR.

2002-01-14  Patrick Burke  <takhisisii@yahoo.com.au>
	* configure.in: Added --enable-paranoid-warnings, only tested with
	gcc3.0.3, so some of the warnings might not exist in previous versions,
	so might potentially cause problems, and if so, might need some
	version checking code.
	* conf/*, usecode/ucxt/*: Removed all warnings created by the above,
	and added $(WARNINGS) to their respective Makefile.am's.
	* files/rwregress.cc, Makefile.am: Just a quick regression tester,
	currently for the Read*(istream &) series of functions. Found it
	useful when 'fixing' files/utils.h.
	* files/utils.h: Theoretically 'optimised' the Read*(istream &) series
	of functions, and removed all the warnings generated by
	--enable-paranoid-warnings.

2002-01-14  Ryan Nunn  <triforce@merlin.net.au>
	* audio/Audio.cc : Force waveout as defualt for Windows. Don't use
	  DirectSound as it's buggy with SDL.

2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* vec.h: explicity typename

2002-01-14  Tristan Tarrant  <nadir@users.sourceforge.net>
	* Makefile.MorphOS, README.AmigaOS, README.MorphOS, 
	  audio/midi_drivers/amiga_midi.*, cheat_screen.cc,
	  files/listfiles.cc, files/utils.cc, version.cc, fnames.h, 
	  audio/Midi.cc: changes by Ruediger Hanke for MorphOS/AmigaOS support
	* data/credits.txt: credit where credit is due
	* configure.in: search for ext/hash_set and ext/hash_map
	* hash_utils.h: changes for cvs GCC